--- a/index.html
+++ b/index.html
@@ -10,29 +10,28 @@
   
   <title>Frontend Mentor | Product preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Perfume
+  <main class="product-preview-card">
 
-  Gabrielle Essence Eau De Parfum
+    <img class="product-image" src="images/image-product-desktop.jpg" alt="parfume Chanel on a table">
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+    <section class="product-details">
+      <p class="product-type">Perfume</p>
 
-  $149.99
-  $169.99
+      <h1>Gabrielle Essence Eau De Parfum</h1>
 
-  Add to Cart
+      <p class="product-description">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+      Perfumer-Creator for the House of CHANEL.</p>
+
+      $149.99
+      $169.99
+
+      Add to Cart
+    </section>
+
+  </main>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
