--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
       <p class="product-description">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
       Perfumer-Creator for the House of CHANEL.</p>
 
-      $149.99
-      $169.99
+      <article class="product-price-container">
+        <p class="product-price">$149.99</p>
+        <p class="product-price-old">$169.99</p>
+      </article>
 
       Add to Cart
     </section>
