--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
+  <!--Montserrat and Frauncess-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+
+
   <link rel="stylesheet" href="scss/style.css"> <!-- link to the stylesheet -->
   
   <title>Frontend Mentor | Product preview card component</title>
