--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
         <p class="product-price-old">$169.99</p>
       </article>
 
-      Add to Cart
+      <button class="add-to-cart-button">
+        <img src="images/icon-cart.svg" alt="indkøbskurv">
+        <p class="button-text">Add to Cart</p>
+      </button>
     </section>
 
   </main>
