Added media query

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
     <img class="product-image" src="images/image-product-desktop.jpg" alt="parfume Chanel on a table">
 
+    <img class="product-image-mobile" src="images/image-product-mobile.jpg" alt="parfume Chanel on a table">
+
     <section class="product-details">
       <p class="product-type">Perfume</p>
 
