Changes to button - added type and changed p to span

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <p class="product-price-old">$169.99</p>
       </article>
 
-      <button class="add-to-cart-button">
+      <button class="add-to-cart-button" type="button">
         <img src="images/icon-cart.svg" alt="indkøbskurv">
-        <p class="button-text">Add to Cart</p>
+        <span class="button-text">Add to Cart</span>
       </button>
     </section>
 
